fixed header text spacing

--- a/unit01/main.css
+++ b/unit01/main.css
@@ -29,7 +29,7 @@ header {
 header h1 {
     text-align: center;
     margin: 0;
-    padding-top: 15%;
+    padding-top: 15vh;
     font-size: 3rem;
 }
 
